# soloE

e1/: test_db.py  test_decode.py  test_final.py
e10/: ca.crt  ca.key  cert_manager.py  ecdsa.crt  ecdsa.key  generate_ecdsa.py  generate_test_certs.py  server.crt  server.key  test.crt  test.key
e11/: README.md  package-lock.json  package.json  tailwind.config.js
e12/: README.md
e13/: README.md
e14/: README.md  monitor_data.py  requirements.txt  system_monitor.py
e15/: README.md  package.json
e16/: index.html
e17/: index.html  vite.config.ts
e18/: README.md
e19/: app.py  ingest.py  query.py  requirements.txt  utils.py
e2/: Cargo.toml  README.md  bootstrap.js  index.html  package.json
e20/: index.html  main.js  package-lock.json  package.json  server.js
e21/: README.md
e22/: Makefile  README.md  go.work
e23/: README.md  SYNC.md  index.html  package.json  vite.config.ts
e23/src-tauri/: Cargo.toml  tauri.conf.json
e23/src-tauri/src/: main.rs
e24/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
e25/: .env.example  Cargo.toml  README.md
e25/seeds/: 01_users.sql  02_roles.sql
e25/src/: cli.rs  config.rs  main.rs  migration.rs
e25/src/commands/: create.rs  down.rs  init.rs  mod.rs  seed.rs  up.rs
e26/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
e27/: README.md  config.py  redis_utils.py  requirements.txt
e28/: index.html  package-lock.json  package.json
e29/: index.html  package-lock.json  package.json
e3/: go.mod  main.go
e30/: .env.example  app.py  ingest.py  query.py  requirements.txt
e31/: README.md
e32/: README.md
e33/: MEMORY_OPTIMIZATION.md  README.md  config.yaml  go.mod  main.go
e34/: README.md  docker-compose.yml
e35/: Cargo.toml
e36/: Cargo.toml  README.md  index.html  package.json  vite.config.ts
e36/src/: App.tsx  filters.rs  index.css  lib.rs
e37/: README.md  app.py  config.py  example.py  models.py  requirements.txt  scheduler.py  shard_task.py  task_queue.py  task_worker.py  tasks.py  test_circular_dependency.py  test_circular_logic.py  test_circular_simple.py  test_shard_task.py
e38/: .gitignore  README.md  index.html  package.json
e38/src-tauri/: Cargo.toml  tauri.conf.json
e38/src-tauri/capabilities/: default.json
e38/src-tauri/src/: efi.rs  lib.rs  secure_boot.rs
e39/: CMakeLists.txt  README.md
e39/benchmark/: main_benchmark.cpp
e39/include/: benchmark_framework.h  csv_reader.h  delta_delta.h  gorilla.h  simple8b.h
e39/scripts/: generate_sample_data.py  plot_results.py
e39/src/: benchmark_framework.cpp  csv_reader.cpp  test_gorilla_special.cpp  test_main.cpp
e39/src/compression/: delta_delta.cpp  gorilla.cpp  simple8b.cpp
e40/: index.html  package-lock.json  package.json  tsconfig.json
e41/: LAYER_SWITCH_FIX.md  README.md  SPEAKER_MODE_README.md
e42/: README.md  go.mod  main.go  verify_fix.go
e43/: README.md  index.html  package-lock.json  package.json  vite.config.js
e44/: README.md  package.json
e45/: package-lock.json  package.json  test-sanitize.js
e46/: OPTIMIZATION.md  README.md  backend.py  frontend.py  performance_test.py  requirements.txt  sample_stock_prices.csv  start_backend.bat  start_frontend.bat  test_volatility.py
e47/: package-lock.json  package.json
e48/: index.html  package-lock.json  package.json
e49/: Cargo.toml  README.md
e49/src/: cli.rs  conflict.rs  dependency.rs  elf.rs  error.rs  main.rs  platform.rs  prefix_inject.rs  report.rs  symbol.rs
e5/: pom.xml
e50/: index.html
e51/: README.md
e52/: README.md
e53/: .gitignore  Cargo.toml  README.md  example_usage.sh
e53/src/: compression.rs  config.rs  data.rs  downsampling.rs  lib.rs  lsm.rs  main.rs  promql.rs  server.rs  tests.rs  ttl.rs
e54/: debug-alias.js  package-lock.json  package.json  report.json  test-tsconfig.js  tsconfig.json
e55/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
e55/src-tauri/: Cargo.toml  tauri.conf.json
e55/src-tauri/src/: commands.rs  discovery.rs  error.rs  file_watcher.rs  main.rs  models.rs  storage.rs  sync_session.rs  transfer.rs
e56/: README.md  debug_data.py  (+9 more)
e59/: README.md  pyproject.toml  requirements.txt  test_analyzer.py  test_bad_code.py  test_performance.py  test_refactor_sample.py
e59/codesmell/: ai_refactor.py  analyzer.py  cli.py  detectors.py  formatter.py  models.py  parser.py  refactor.py
e62/wasm/: Cargo.toml
e62/wasm/src/: csr.rs  lib.rs  multiply.rs
e63/src-tauri/: Cargo.toml  tauri.conf.json
e63/src-tauri/src/: file.rs  main.rs  mdns.rs  report.rs  signaling.rs  transfer.rs
e68/: Cargo.toml  README.md
e68/src/: congestion.rs  connection.rs  lib.rs  main.rs  metrics.rs  packet.rs  rtt.rs  stream.rs  window.rs
e69/: Cargo.toml  README.md
e69/src/: cluster.rs  config.rs  dags.rs  error.rs  ipc.rs  lib.rs  main.rs  metrics.rs  module.rs  scheduler.rs  webserver.rs  worker.rs
e69/static/: app.js  index.html  styles.css
e70/: CMakeLists.txt  FIXES_README.md
e70/include/: banded_alignment.h  common.h  fasta_parser.h  gpu_memory_manager.h  pair_end_aligner.h  task_queue.h  visualization.h
e70/src/: banded_alignment.cpp  fasta_parser.cpp  gpu_memory_manager.cpp  pair_end_aligner.cpp  task_queue.cpp  visualization.cpp
e70/test/: CMakeLists.txt  test_advanced_features.cpp  test_fixes.cpp
e79/: .env.example  Cargo.toml  README.md
e79/src/: api.rs  main.rs  models.rs  mqtt.rs  rules.rs  storage.rs
e87/: .gitignore  Cargo.toml  FAILOVER_TEST.md  README.md
e87/bench/: Cargo.toml
e87/bench/src/: main.rs
e87/client/: Cargo.toml
e87/client/src/: main.rs
e87/common/: Cargo.toml
e87/common/src/: lib.rs
e87/coordinator/: Cargo.toml
e87/coordinator/src/: main.rs
e87/examples/: basic_usage.rs  cas_usage.rs
e87/scripts/: gen_certs.ps1  gen_certs.sh  quick_test.ps1
e91/: .gitignore  Cargo.toml  README.md  tauri.conf.json
e91/src/: capture.rs  db.rs  hotkey.rs  lib.rs  main.rs  ocr.rs  translator.rs  tray.rs
e93/rust-ext/: Cargo.toml  index.js  package.json
e93/rust-ext/src/: lib.rs
(+1108 files in other folders)
