[package]
name = "symconflict"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
walkdir = "2.5"
tempfile = "3.10"
which = "6.0"
once_cell = "1.19"
glob = "0.3"
chrono = "0.4"

