[package]
name = "light_tsdb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
thiserror = "1.0"
nom = "7.0"
itertools = "0.10"
crossbeam-queue = "0.3"
parking_lot = "0.12"
flate2 = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
