[package]
name = "wasi-scheduler"
version = "0.2.0"
edition = "2021"

[dependencies]
wasmtime = "15.0"
wasmtime-wasi = "15.0"
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
crossbeam-queue = "0.3"
priority-queue = "1.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.5"
axum = "0.6"
hyper = "0.14"
http = "0.2"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6"
num_cpus = "1.15"

[profile.release]
opt-level = 3
debug = false
