[package]
name = "wind-farm-monitor"
version = "0.1.0"
edition = "2021"
description = "Wind farm vibration monitoring and alerting system"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
