[workspace]
members = [
    "common",
    "coordinator",
    "client",
    "bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
quinn = "0.11"
rustls = "0.23"
rustls-pemfile = "2.1"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
parking_lot = "0.12"
