[package]
name = "hover-translator"
version = "0.1.0"
description = "Desktop hover translator with OCR and LLM optimization"
authors = ["you"]
edition = "2021"
default-run = "hover-translator"

[[bin]]
name = "hover-translator"
path = "src/main.rs"

[lib]
name = "hover_translator_lib"
path = "src/lib.rs"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "native-tls", "unstable"] }
tauri-plugin-sql = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
screenshots = "0.8"
rusty-tesseract = "1.1"
image = { version = "0.25", features = ["png"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "rkyv"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
urlencoding = "2"
futures = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "libloaderapi"] }

[features]
# by default Tauri uses `custom-protocol` for better performance
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
