[package]
name = "lan-share"
version = "1.0.0"
description = "A cross-platform LAN file transfer tool"
authors = ["you"]
license = "MIT"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rustls = "0.21"
rustls-pemfile = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = { version = "6", features = ["serde"] }
notify-debouncer-full = "0.3"
sha2 = "0.10"
walkdir = "2"
blake3 = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
