[package]
name = "p2p-file-transfer"
version = "0.1.0"
description = "P2P File Transfer Tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
memmap2 = "0.9"
sha2 = "0.10"
mdns-sd = "0.8"
async-std = "1.12"
byteorder = "1.5"
thiserror = "1.0"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["json"] }
serde_qs = "0.12"
local-ip-address = "0.6"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
