[package]
name = "bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quic-bench"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rand.workspace = true
hex = "0.4"
anyhow = "1.0"
