[package]
name = "coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
clap.workspace = true
rand.workspace = true
anyhow = "1.0"
