[package]
name = "osm-route-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
napi = "2.16"
napi-derive = "2.16"
osmpbf = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
priority-queue = "1.3"
rand = "0.8"
lazy_static = "1.4"

[build-dependencies]
napi-build = "2.0"
